cinema-mk-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinema-mk-deployment
  namespace: cinema-mk-namespace
spec:
  replicas: 5
  selector:
    matchLabels:
      app: cinema-mk-app
  revisionHistoryLimit: 5
  minReadySeconds: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: cinema-mk-app
    spec:
      containers:
        - name: cinema-mk-container
          image: nsofeski/cinema-mk1:1.0
          ports:
            - containerPort: 4422
          imagePullPolicy: IfNotPresent
          command: ["java"]
          args: ["-jar", "/demo-0.0.1-SNAPSHOT.jar"]
