database.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cinema-mk-postgres
  namespace: cinema-mk-namespace
spec:
  serviceName: cinema-mk-postgres-service
  selector:
    matchLabels:
      app: cinema-mk-app
  replicas: 1
  template:
    metadata:
      labels:
        app: cinema-mk-app
        namespace: cinema-mk-namespace
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6060
              name: postgres-port
          imagePullPolicy: Always
          volumeMounts:
            - name: cinema-mk-postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: cinema-mk-postgres-data
          persistentVolumeClaim:
            claimName: cinema-mk-postgres-pvc1
---
apiVersion: v1
kind: Service
metadata:
  name: cinema-mk-postgres-service
  namespace: cinema-mk-namespace
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 6060
