hl-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless-service
  namespace: cinema-mk-namespace
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 4422
      targetPort: 6060
